[package]
name = "simnode-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-simnode = { git = "https://github.com/polytope-labs/substrate-simnode", branch = "master" }
parachain-runtime = { package = "parachain-template-runtime", git =  "https://github.com/Wizdave97/parachain-runtime", branch = "master" }
node = { package = "parachain-template-node", git = "https://github.com/Wizdave97/parachain-runtime", branch = "master" }

simnode-apis = { package = "simnode-runtime-apis", git = "https://github.com/polytope-labs/substrate-simnode", default-features = false, branch = "master" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
structopt = "0.3.25"

parachain-inherent = { package = "cumulus-primitives-parachain-inherent", git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }

jsonrpc-core = "18.0"

derive_more = "0.99.17"